SCR #214522 - fixed native scrollbar

--- a/src/modules/menu/components/profile-menu/styles/themes/_submenu.scss
+++ b/src/modules/menu/components/profile-menu/styles/themes/_submenu.scss
@@ -15,20 +15,26 @@
         grid: {
             auto-columns: max-content;
             auto-flow: column;
+
             gap: ef.get-value($submenuProfileDefault, 'menuGap');
         }
         @include bm.get-mq-map('margin', $submenuProfileDefault, 'submenuMargin');
         overflow: auto hidden;
-        width: 100%;
+
+        -ms-overflow-style: none;
+        scrollbar-width: none;
 
         &:before {
-            content: '';
             position: absolute;
-            left: 0;
             bottom: 0;
+            left: 0;
+
             width: 100%;
             height: ef.get-value($submenuProfileDefault, 'submenuBorderBottomHeight');
+
             background: ef.get-value($submenuProfileDefault, 'submenuBorderBottom');
+
+            content: '';
         }
 
         ::ng-deep {
@@ -38,8 +44,10 @@
                 &__link {
                     position: relative;
                     z-index: 2;
+
                     display: flex;
                     padding: ef.get-value($submenuProfileDefault, 'submenuItemPadding');
+
                     text-decoration: none;
                     @include text.get-text-style('PrimaryText');
                     @include bm.transition(color);
@@ -49,14 +57,17 @@
                     }
 
                     &:before {
-                        content: '';
                         position: absolute;
-                        left: 0;
                         bottom: 0;
+                        left: 0;
+
                         width: 0;
-                        height: 2px;
+                        height: ef.get-value($submenuProfileDefault, 'linkBeforeHeight');
+
                         background: ef.get-value($submenuProfileDefault, 'submenuItemActiveBorder');
                         @include bm.transition(width);
+
+                        content: '';
                     }
 
                     &:hover {
@@ -78,5 +89,9 @@
                 }
             }
         }
+    }
+
+    .wlc-menu--theme-default.wlc-menu--type-profile-menu::-webkit-scrollbar {
+        display: none;
     }
 }
